--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   background-color: #e5e5e5;
-  background-image: url(/assets/image_geometry_1.png);
+  background-image: url(./assets/image_geometry_1.png);
   background-repeat: no-repeat;
 }
 
