--- a/style.css
+++ b/style.css
@@ -294,6 +294,7 @@ a {
 form {
   display: flex;
   flex-direction: column;
+  margin-bottom: 50px;
 }
 
 #full-name {
@@ -350,7 +351,6 @@ form {
 
 footer {
   width: 100%;
-  margin-top: 64px;
   background-color: #1a2236;
 }
 
