--- a/style.css
+++ b/style.css
@@ -735,9 +735,11 @@ button:hover {
   .project-ins {
     opacity: 0;
     margin-top: -190px;
+    transition: opacity, 0.2ms, ease-in, 1200ms;
   }
 
   .project-ins:hover {
-    opacity: 100%;
+    opacity: 1;
+    cursor: pointer;
   }
 }
