--- a/style.css
+++ b/style.css
@@ -567,7 +567,7 @@ button:hover {
   color: crimson;
   font-family: 'Poppins', sans-serif;
   margin-top: 2%;
-  margin-bottom: -5%
+  margin-bottom: -5%;
 }
 
 @media screen and (min-width: 768px) {
